--- a/css/style.css
+++ b/css/style.css
@@ -30,15 +30,24 @@
 }
 
 /*GLOBAL*/
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
 
 .page-body {
   min-width: 960px;
   margin: 0;
   padding: 0;
+
   font-family: "Cuprum";
   font-size: 14px;
   line-height: 24px;
   font-weight: 400px;
+
   color: var(--basic-darkblue);
 }
 
@@ -60,6 +69,7 @@ img {
 /*GRID*/
 .page-body {
   min-height: 100%;
+
   display: grid;
   grid-template-rows: min-content 1fr min-content;
   align-content: cecnter;
@@ -68,9 +78,11 @@ img {
 
 .button {
   display: inline-block;
+
   text-align: center;
   vertical-align: center;
   text-transform: uppercase;
+  
   border: none;
 
   background-color: var(--basic-red);
@@ -102,17 +114,34 @@ img {
 /*HEADER*/
 .main-header {
   background-color: var(--basic-background);
+
 }
 /*HEADER TOP*/
 
 .header-top {
+  display: grid;
+
   background-color: var(--special-background);
+}
+
+.header-top-wrapper  {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 3fr;
 }
 
 
 .product-order {
   list-style: none;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
+
+
 
 .product-order-item a {
   font-size: 18px;
@@ -122,6 +151,20 @@ img {
 }
 
 /*HEADER MIDLE*/
+
+.header-midle {
+  display: grid;
+
+}
+
+.header-midle-wrapper {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
 
 .header-midle-block  p{
   font-size: 16px;
@@ -146,30 +189,112 @@ img {
 .user-menu a{
   line-height: 21px;
   font-size: 21px;
+  display: inline-block;
+
 
   text-align: center;
+  align-items: center;
 }
 
 /*SITE NAVIGATION*/
 
+.navigation-wrapper {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
 .site-navigation-list {
   list-style: none;
+  width: 100%;
+  display: flex;
 }
 
 .site-navigation-item {
+  display: block;
+
+  justify-content: space-between;
+}
+
+.site-navigation-item a{
   font-size: 18px;
   line-height: 24px;
 
-  text-align: center;
+
+
+
+  color: var(--white);
+  background-color: var(--basic-darkblue);
 }
 
 /*CONTAINER*/
 
 /*PRODUCT CATEGORIES*/
-
+.product-categories {
+  margin-top: 39px;
+}
 .categories-list {
   list-style: none;
+
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
 }
+
+.item-1 {
+  background-color: var(--special-yellow);
+
+  grid-row-start: 1;
+  grid-row-end: 1;
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+.item-2 {
+  background-color: var(--special-blue);
+
+  grid-row-start: 1;
+  grid-row-end: 1;
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+.item-3 {
+  background-color: var(--special-lilac);
+
+  grid-row-start: 1;
+  grid-row-end: 1;
+  grid-column-start: 3;
+  grid-column-end: 4;
+}
+
+.item-4 {
+  background-color: var(--special-greenlight);
+
+  grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column-start: 3;
+  grid-column-end: 4;
+}
+
+.item-5 {
+  background-color: var(--special-yellow);
+
+  grid-row-start: 3;
+  grid-row-end: 4;
+  grid-column-start: 3;
+  grid-column-end: 4;
+}
+
+.slider-item {
+  grid-row-start: 2;
+  grid-row-end: 4;
+  grid-column-start: 1;
+  grid-column-end: 3;
+
+}
+
 
 .categories-item h3{
   font-size: 24px;
@@ -213,11 +338,21 @@ img {
 }
 
 /*POPULAR PRODUCT*/
+.popular-product {
+  margin-top: 39px;
+  height: 450px;
+
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
 .popular-product-block {
   width: 100%;
   height: 89px;
 
   background-color: var(--special-white);
+  grid-row-start: 1;
+  grid-row-end: 2;
 }
 
 .popular-product-block h2 {
@@ -235,7 +370,37 @@ img {
 
 .popular-product-list {
   list-style: none;
+
+  grid-row-start: 2;
+  grid-row-end: 3;
+
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
 }
+
+.popular-product-item {
+  border: 1px solid var(--border);
+  margin: 0;
+  padding: 0;
+
+}
+
+.popular-1 {
+  grid-column: 1/2;
+}
+.popular-2 {
+  grid-column: 2/3;
+}
+
+.popular-3 {
+  grid-column: 3/4;
+}
+
+.popular-4 {
+  grid-column: 4/5;
+}
+
 
 .popular-product-item p:nth-of-type(1) {
   font-style: "PT Sans", Arial, sans-serif;
@@ -267,12 +432,19 @@ img {
 
 
 /*POPULAR MAKERS*/
+.popular-makers {
+  margin-top: 39px;
+
+  display: grid;
+  grid-template-rows: min-content 1fr;
+}
 
 .popular-makers-block {
   width: 100%;
   height: 89px;
 
   background-color: var(--special-white);
+  grid-row: 1/2;
 }
 
 .popular-makers-block h2 {
@@ -291,6 +463,45 @@ img {
 
 .makers-list {
   list-style: none;
+
+  grid-row: 2/3;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.makers-1 {
+  grid-column: 1/2;
+  grid-row: 1/2
+}
+.makers-2 {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+.makers-3 {
+  grid-column: 3/4;
+  grid-row: 1/2;
+}
+.makers-4 {
+  grid-column: 4/5;
+  grid-row: 1/2;
+}
+.makers-5 {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+.makers-6 {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.makers-7 {
+  grid-column: 3/4;
+  grid-row: 2/3;
+}
+.makers-8 {
+  grid-column: 4/5;
+  grid-row: 2/3;
 }
 
 .makers-item {
@@ -343,9 +554,21 @@ makers-item img {
 .index-columns {
   background-color: var(--white);
   width: 100%;
+  margin-top: 53px;
+
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 20px;
 }
 
 /*COMPANY*/
+.company {
+  width: 480px;
+
+  grid-column: 1/2;
+  grid-row: 1;
+}
 .company h2 {
   font-size: 30px;
   line-height: 30px;
@@ -401,6 +624,7 @@ makers-item img {
 /*PAGE FOOTER*/
 .page-footer {
   background-color: var(--basic-darkblue);
+  margin-top: 50px;
 }
 
 .page-footer .footer-under-block {
@@ -408,12 +632,28 @@ makers-item img {
   color: var(--white);
 }
 
+.page-footer .container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
 /*MAIN FOOTER*/
 
 /*FOOTER SITE NAVIGATION*/
 
+.footer-site-navigation {
+  grid-column: 1/3;
+  grid-row: 1/2;
+
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-gap: 60px;
+}
+
 .footer-navigation-list {
   list-style: none;
+
 }
 
 .footer-navigation-item a {
@@ -430,6 +670,14 @@ makers-item img {
 
 
 /*FOOTER MIDLE BLOCK*/
+.footer-midle-block {
+  grid-row: 2/3;
+  grid-column: 1/3;
+
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-gap: 60px;
+}
 
 .footer-midle-block p {
   font-size: 18px;
@@ -457,12 +705,28 @@ makers-item img {
 }
 
 /*FOOTER UNDER BLOCK*/
+.footer-under-block {
+  grid-column: 1/3;
+  grid-row: 3/4;
+  display: grid;
+  grid-template-columns: 240px 161px 300px;
+  grid-gap: 100px;
+}
 
 .copyright {
   font-size: 16px;
   line-height: 18px;
 
   color: var(--white);
+  grid-column: 1/2;
+
+}
+
+.socials {
+  grid-column: 2/3;
+
+  display: flex;
+  justify-content: space-between;
 }
 
 .socials-list {
@@ -473,8 +737,15 @@ makers-item img {
   font-size: 16px;
   line-height: 18px;
 
+  grid-column: 3/4;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
 }
 
+.feedback {
+  grid-column: 1/2;
+}
 
 .feedback a{
   font-size: 16px;
@@ -489,6 +760,10 @@ makers-item img {
 
 .feedback a:active {
   color: var(--basic-red);
+}
+
+.development-proj {
+  grid-column: 2/3;
 }
 
 .development-proj p {
@@ -509,4 +784,63 @@ makers-item img {
 
 .development-proj a:active {
   color: var(--basic-red);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*CATALOG*/
+.breadcrumbs {
+  list-style: none;
+}
+
+.products-list {
+  list-style: none;
+}
+
+.page-title_catalog {
+  width: 100%;
+
+  background-color: var(--basic-background);
+
+  padding-top: 29px;
+  padding-left: 29px;
+  padding-bottom: 30px;
+}
+
+.page-title_catalog h1 {
+  line-height: 30px;
+  font-size: 30px;
+  font-weight: 400;
+
+}
+
+ .catalog_info {
+  background-color: var(--basic-background);
 }
